--- a/config.ini
+++ b/config.ini
@@ -2,10 +2,10 @@
 fromgroup = https://t.me/teamtrickyabhi
 ToGroup = https://t.me/fastwinvip0
 GroupID = -1001717626647
-PhoneNumber = 919918423153
+PhoneNumber = +33 6 65 91 60 65
 EnterStop = 20000000
 StartingAccount = 1
 EndAccount = 1000000
-api = 23371724
-hash = 94e6418b42d5a1dfda9f40f98626526a
+api = 20272091
+hash = 2bbd8838e384549cd1dd7f89153017f5
 Addids = AnnexMusicBot
